# sdp_ss20_collision_monitoring_for_robotic_manipulators

./: .gitignore  API_documentation.html  CMakeLists.txt  Collision_Monitoring.cpp  Collision_Monitoring_Config.h.in  LICENSE.md  README.md  UML_diagram_SDP.drawio  log.txt
UML Diagrams/: UML_diagram_SDP.drawio
catkin_workspace/: README.md
catkin_workspace/alans_stuff/sdp_test/: CMakeLists.txt  package.xml
catkin_workspace/alans_stuff/sdp_test/src/: subscriber.cpp
catkin_workspace/devel/: .catkin  .rosinstall  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
catkin_workspace/docs/: Kinova_Controller_UML_draft.drawio  Kinova_Controller_UML_simplified.drawio  Kinova_arm_UML.drawio  ROS_kinova_arm_UML
catkin_workspace/src/: CMakeLists.txt
catkin_workspace/src/kinova_arm/: CMakeLists.txt  collision_monitoring  include  package.xml  src  urdf
catkin_workspace/src/kinova_arm/collision_monitoring/: CMakeLists.txt
catkin_workspace/src/kinova_arm/launch/: dual_manipulators.launch  dual_robots.launch  one_arm.launch  robot.launch  single_manipulator.launch  two_arms.launch
catkin_workspace/src/kinova_arm/rviz/: camera_1.rviz  camera_2.rviz  kinova.rviz  kinova_dual.rviz  kinova_dual_1.rviz  kinova_dual_2.rviz
catkin_workspace/src/kinova_arm/src/: arm_controller.cpp  kinova_CM_node.cpp
catkin_workspace/src/kortex_control/: package.xml
catkin_workspace/src/kortex_description/: package.xml
catkin_workspace/src/kortex_driver/protos/: ActuatorConfig.proto  Base.proto  ControlConfig.proto  Errors.proto
catkin_workspace/src/kortex_gazebo/: package.xml
catkin_workspace/src/narko_description/: CMakeLists.txt  README.md  package.xml
catkin_workspace/src/narko_description/robots/: youbot.urdf
catkin_workspace/src/narko_kinova_base_collision/: README.md
catkin_workspace/src/narko_kinova_base_collision/Documentation/: Remaining-ROS-Tasks.txt
catkin_workspace/src/narko_kinova_base_collision/launch/: robot_base_basic_arm.launch  (+3 more)
collision_monitoring/: CMakeLists.txt  README.md
collision_monitoring/docs/: Collision_Monitoring_UML_simplified.drawio  UML_diagram_SDP.drawio
collision_monitoring/include/: arm.h  monitor.h  obstacle.h  primitives.h
collision_monitoring/src/: arm.cpp  monitor.cpp  obstacle.cpp  primitives.cpp
deliverables/doxygen/: LICENSE.md  README.md  collision_monitoring  doxygen.conf
deliverables/doxygen/catkin_workspace/: README.md
deliverables/doxygen/html/: _l_i_c_e_n_s_e_8md.html  _l_i_c_e_n_s_e_8md_source.html  _r_e_a_d_m_e_8md.html  _r_e_a_d_m_e_8md_source.html  annotated.html  annotated_dup.js  arm_8cpp.html  arm_8cpp__incl.map  arm_8cpp__incl.md5  arm_8cpp_source.html  arm_8h.html  arm_8h__dep__incl.map  arm_8h__dep__incl.md5  arm_8h__incl.map  arm_8h__incl.md5  arm_8h_source.html  arm__controller_8cpp.html  arm__controller_8cpp.js  arm__controller_8cpp__incl.map  arm__controller_8cpp__incl.md5  arm__controller_8cpp_source.html  arm__controller_8h.html  arm__controller_8h__dep__incl.map  arm__controller_8h__dep__incl.md5  arm__controller_8h__incl.map  arm__controller_8h__incl.md5  arm__controller_8h_source.html  base__controller_8cpp.html  base__controller_8cpp__incl.map  base__controller_8cpp__incl.md5  base__controller_8h.html  base__controller_8h__dep__incl.map  base__controller_8h__dep__incl.md5  base__controller_8h__incl.map  base__controller_8h__incl.md5  class_arm-members.html  class_arm.html  class_arm.js  class_arm__coll__graph.map  class_arm__inherit__graph.map  (+203 more)
deliverables/doxygen/include/: arm_controller.h  base_controller.h  kinova_arm.h
deliverables/doxygen/latex/: annotated.tex  arm_8cpp.tex  arm_8cpp__incl.md5  arm_8h.tex  arm_8h__dep__incl.md5  arm_8h__incl.md5  arm__controller_8cpp.tex  arm__controller_8cpp__incl.md5  arm__controller_8h.tex  arm__controller_8h__dep__incl.md5  arm__controller_8h__incl.md5  base__controller_8cpp.tex  base__controller_8cpp__incl.md5  base__controller_8h.tex  base__controller_8h__dep__incl.md5  base__controller_8h__incl.md5  class_arm.eps  class_arm.tex  class_arm__coll__graph.md5  class_arm__inherit__graph.md5  class_arm_controller.tex  class_arm_controller__coll__graph.md5  class_base.tex  class_base__coll__graph.md5  class_base__inherit__graph.md5  class_base_controller.tex  class_base_controller__coll__graph.md5  class_box3.tex  class_box3__inherit__graph.md5  class_capsule.eps  class_capsule.tex  class_capsule__coll__graph.md5  class_capsule__inherit__graph.md5  class_kinova_arm.eps  class_kinova_arm.tex  class_kinova_arm__inherit__graph.md5  class_kinova_simulator.tex  class_line.tex  class_marker_publisher.tex  class_monitor.tex  (+61 more)
deliverables/doxygen/src/: README.md  arm_controller.cpp  base_controller.cpp  kinova_arm.cpp
deliverables/latex/: SS2020_Gomez_Parra_Penfold.aux  SS2020_Gomez_Parra_Penfold.blg  SS2020_Gomez_Parra_Penfold.fdb_latexmk  SS2020_Gomez_Parra_Penfold.fls  SS2020_Gomez_Parra_Penfold.tex  WS20_21_Sreenivasa_Zain_Urvashi.aux  WS20_21_Sreenivasa_Zain_Urvashi.out  WS20_21_Sreenivasa_Zain_Urvashi.tex  example.tex  ieeeconf.cls  root.aux  root.tex
deliverables/presentation/: Collision monitoring for robotic manipulators_draft.pptx
docs/: Kinova_arm_UML  Kinova_arm_UML.drawio  Kinova_arm_UML_simplified.drawio  UML_diagram_SDP.drawio
docs/html/: graph_legend.html  index.html  md_README.html  pages.html
docs/html/search/: pages_0.js
docs/latex/: md_README.tex  refman.tex
include/: arm.h  arm_controller.h  arm_model.h  base_controller.h  basic_shapes.h  collision_monitoring_config.h  kinova_arm.h  marker_publisher.h  primitive.h
src/: CMakeLists.txt  README.md  arm.cpp  arm_controller.cpp  arm_model.h  base_CM_node.cpp  base_controller.cpp  collision_monitoring.cpp  dual_arm_kinova_interfacer.cpp  dual_kinova_CM_node.cpp  input_output_testing.cpp  kinova_CM_node.cpp  kinova_arm.cpp  kinova_interfacer.cpp  makefile  marker_publisher.cpp  model_interpreter.cpp  model_interpreter.h  robot_sim.cpp  test.cpp
test/: CMakeLists.txt  test.cpp  test_cylinder.cpp
urdf/: Kinova_2.urdf
(+120 files in other folders)
